# active-boxes

./: .drone.yml  .hgtags  LICENSE  README.md  pyproject.toml
active_boxes/: __init__.py  __version__.py  activitypub.py  backend.py  collection.py  content_helper.py  errors.py  http_client.py  httpsig.py  key.py  linked_data_sig.py  plugin.py  urlutils.py  webfinger.py
docs/: conf.py
documents/: ACTIVITYPUB_COMPLIANCE.md  IMPLEMENTATION_PLAN.md  MODERNIZATION_SUMMARY.md  MODERNIZE_PLAN.md  PYTHON_310_MODERNIZATION.md  TEST_SUITE_IMPROVEMENTS.md
scripts/: lint-check.sh  runtest.sh
tests/: conftest.py  test_activitypub.py  test_activitypub_activities.py  test_activitypub_additional.py  test_activitypub_core.py  test_activitypub_specialized.py  test_backend.py  test_backend_async.py  test_backend_infrastructure.py  test_collection.py  test_content_helper.py  test_coverage_improvement.py  test_coverage_improvement_part2.py  test_final_coverage.py  test_http_client.py  test_httpsig.py  test_key.py  test_linked_data_sig.py  test_plugin.py  test_to_dict.py  test_urlutils.py  test_utilities.py  test_utility_functions.py  test_webfinger.py
